# felyx-uva-example

./: .env.example  README.md  pyproject.toml  query_snowflake.py  requirements.txt
